fix low contrast errors in style.css

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ ul {
 }
 
 .a-lang {
-  color: #6070ff;
+  color: #4e5cd4;
   text-decoration: none;
   font-style: normal;
   font-weight: 500;
@@ -168,7 +168,7 @@ label {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #4e5cd4;
 }
 
 .suptext:hover {
@@ -582,7 +582,6 @@ label {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #7f8cff;
   }
 
   .social {
@@ -698,7 +697,7 @@ label {
   }
 
   .a-lang {
-    color: #6070ff;
+    
     text-decoration: none;
     font-family: Poppins, sans-serif;
     font-style: normal;
@@ -745,7 +744,7 @@ label {
 
   .contact-container {
     width: 100%;
-    background-color: #6070ff;
+    background-color: #4e5cd4;
     border-radius: 100px 0 0 0;
     display: flex;
     flex-direction: column;
@@ -809,5 +808,9 @@ label {
 
   .btn {
     margin-bottom: 5rem;
+  }
+
+  .footer {
+    padding-bottom: 0;
   }
 }
